--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100;1,300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Ostapchuk apartment project</title>
   </head>
   <body class="container">
+    <div class="contacts">
+      <a class="phone" href="tel:380673621323">+38 (067) 362-13-23</a>
+      <a class="email" href="#">janov@gmail.com</a>
+    </div>
     <header class="header">
       <nav class="nav">
         <div class="nav-logo">
@@ -39,20 +44,23 @@
 
     <main class="main">
       <section class="main-slider">
-        <div class="slider-one">Slider ONE</div>
-        <div class="slider-two">Slider TWO</div>
+        <div class="slider-one">Для покупателей</div>
+        <div class="slider-two">Для продавцов</div>
+        <div class="slider-three">Для арендаторов</div>
       </section>
       <section class="news">
-        <div class="info-slider">news SLIDER or FORM</div>
-        <div class="info-text">news TEXT or FORM</div>
+        <div class="info-slider">Blog slider</div>
+        <div class="info-text">Blog title</div>
       </section>
       <section class="info">
         <div class="about-us">GENERAL INFO</div>
       </section>
-      <div class="social">SOCIALS</div>
     </main>
 
-    <footer class="footer">FOOTER</footer>
+    <footer class="footer">
+      FOOTER
+      <div class="social">SOCIALS</div>
+    </footer>
 
     <script src="js/main.js"></script>
   </body>
